fix hero spacing

--- a/src/css/Hero.css
+++ b/src/css/Hero.css
@@ -58,7 +58,7 @@
   }
 
   .hero > span {
-    margin: 0 0.5rem;
+    margin: 0 0.25rem;
   }
 
   .view--projects {
